# server

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package.json
entity/: Cargo.toml
entity/src/: comment.rs  lib.rs  prelude.rs  sea_orm_active_enums.rs  thread.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
prisma/: schema.prisma
prisma/migrations/20220718203522_create_thread_table/: migration.sql
prisma/migrations/20220719193105_add_comment_table/: migration.sql
prisma/migrations/20220720005425_remove_userhash/: migration.sql
src/: db.rs  index.ts  main.rs
src/gql/: mod.rs  schema.rs
src/gql/models/: comment.ts  comment_model.rs  mod.rs  thread.ts  thread_model.rs
src/gql/mutation/: mod.rs  thread.rs
src/gql/query/: mod.rs  thread.rs
src/gql/resolvers/: thread_resolver.ts
