[package]
name = "entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.9.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
async-graphql = "4.0.5"
serde = { version = "1.0.140", features = ["derive"] }
